--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,47 +1,16 @@
-name: Deploy Spring App to Cloud Run
+- name: Set up Google Cloud
+  uses: google-github-actions/setup-gcloud@v2
+  with:
+    service_account_key: ${{ secrets.GCP_SA_KEY }}
+    project_id: ${{ env.PROJECT_ID }}
+    export_default_credentials: true
 
-on:
-  push:
-    branches: [master]
+- name: Authenticate Docker for Artifact Registry
+  run: |
+    gcloud auth configure-docker us-central1-docker.pkg.dev
 
-env:
-  PROJECT_ID: bright-link-466516-a1
-  REGION: us-central1
-  SERVICE_NAME: spring-app
-
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout source
-        uses: actions/checkout@v3
-
-      - name: Set up Google Cloud
-        uses: google-github-actions/setup-gcloud@v2
-        with:
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          project_id: ${{ env.PROJECT_ID }}
-          export_default_credentials: true
-
-      - name: Build with Maven
-        run: mvn clean package -DskipTests
-
-      - name: Authenticate Docker to Artifact Registry
-        run: |
-          gcloud auth configure-docker us-central1-docker.pkg.dev
-
-
-      - name: Build and Push Docker Image
-        run: |
-          IMAGE="us-central1-docker.pkg.dev/$PROJECT_ID/spring-run-repo/$SERVICE_NAME"
-          docker build -t $IMAGE .
-          docker push $IMAGE
-
-      - name: Deploy to Cloud Run
-        run: |
-          gcloud run deploy $SERVICE_NAME \
-            --image us-central1-docker.pkg.dev/$PROJECT_ID/spring-run-repo/$SERVICE_NAME \
-            --region $REGION \
-            --platform managed \
-            --allow-unauthenticated
+- name: Build and push Docker image
+  run: |
+    IMAGE="us-central1-docker.pkg.dev/$PROJECT_ID/spring-run-repo/$SERVICE_NAME"
+    docker build -t $IMAGE .
+    docker push $IMAGE
