--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,14 +24,18 @@ jobs:
           project_id: ${{ env.PROJECT_ID }}
           export_default_credentials: true
 
+      - name: Manually activate service account
+        run: |
+          echo "$GCP_SA_KEY" > key.json
+          gcloud auth activate-service-account --key-file=key.json
+          gcloud config set project $PROJECT_ID
+        env:
+          GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
+
       - name: Authenticate Docker for Artifact Registry
         run: gcloud auth configure-docker us-central1-docker.pkg.dev
 
-      # ✅ INSERT LOGGING HERE
-      - name: Show Docker config
-        run: cat ~/.docker/config.json
-
-      - name: Show active gcloud credentials
+      - name: Show active credentials
         run: gcloud auth list
 
       - name: Show active access token (just to confirm auth works)
